* vm_eval.c (eval_string_with_cref): A binding should keep   refinements activation information and the refinements should be   activated in subsequent eval calls with the binding.   [ruby-core:67945] [Bug #10818]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@49851 b2dd03c8-39d4-4d8f-98ff-823fe69b080e